fix spacing

--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ menu {
 
 footer {
     flex: 0 30px;
+    
 }
 
 main {
@@ -28,8 +29,10 @@ main {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 100px;
 }
+
 
 
 
